--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,16 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "dependencies": {
-    "@prisma/client": "^6.7.0",
+    "@prisma/client": "^6.8.0",
+    "@types/express": "^4.17.21",
     "accepts": "^2.0.0",
     "acorn": "^8.14.1",
     "acorn-walk": "^8.3.4",
     "arg": "^4.1.3",
+    "argon2": "^0.43.0",
     "body-parser": "^2.2.0",
     "bytes": "^3.1.2",
     "call-bind-apply-helpers": "^1.0.2",
@@ -16,10 +19,12 @@
     "content-type": "^1.0.5",
     "cookie": "^0.7.2",
     "cookie-signature": "^1.2.2",
+    "cors": "^2.8.5",
     "create-require": "^1.1.1",
     "debug": "^4.4.0",
     "depd": "^2.0.0",
     "diff": "^4.0.2",
+    "dotenv": "^16.5.0",
     "dunder-proto": "^1.0.1",
     "ee-first": "^1.1.1",
     "encodeurl": "^2.0.0",
@@ -31,7 +36,7 @@
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
     "expres": "^0.0.5",
-    "express": "^5.1.0",
+    "express": "^4.21.2",
     "finalhandler": "^2.1.0",
     "forwarded": "^0.2.0",
     "fresh": "^2.0.0",
@@ -47,6 +52,7 @@
     "inherits": "^2.0.4",
     "ipaddr.js": "^1.9.1",
     "is-promise": "^4.0.0",
+    "jsonwebtoken": "^9.0.2",
     "make-error": "^1.3.6",
     "math-intrinsics": "^1.1.0",
     "media-typer": "^1.1.0",
@@ -76,11 +82,14 @@
     "side-channel-map": "^1.0.1",
     "side-channel-weakmap": "^1.0.2",
     "statuses": "^2.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "toidentifier": "^1.0.1",
     "ts-node": "^10.9.2",
     "type-is": "^2.0.1",
     "undici-types": "^6.21.0",
     "unpipe": "^1.0.0",
+    "uuid": "^11.1.0",
     "v8-compile-cache-lib": "^3.0.1",
     "vary": "^1.1.2",
     "wrappy": "^1.0.2",
@@ -91,17 +100,20 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "prisma": {
-    "seed": "npx tsx src/seed.ts"
+    "seed": "npx tsx prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^5.0.1",
+    "@types/cors": "^2.8.18",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.18",
-    "prisma": "^6.7.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/uuid": "^10.0.0",
+    "prisma": "^6.8.0",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
-  },
-  "description": ""
+  }
 }
