--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "acorn-walk": "^8.3.4",
     "arg": "^4.1.3",
     "argon2": "^0.43.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^2.2.0",
     "bytes": "^3.1.2",
     "call-bind-apply-helpers": "^1.0.2",
@@ -106,6 +107,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.18",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.18",
