--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,12 @@ services:
       context: ./backend
       dockerfile: backend.dockerfile
     ports:
-      - 4000:4000
+      - 3001:3000
     environment:
       - DATABASE_URL
+    depends_on:
+      - db
+    restart: unless-stopped
 
   db:
     container_name: db
