--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,12 +6,14 @@ services:
       context: ./backend
       dockerfile: backend.dockerfile
     ports:
-      - 3001:3000
+      - 3000:3000
     environment:
       - DATABASE_URL
     depends_on:
       - db
     restart: unless-stopped
+    networks:
+      - luminary-network
 
   db:
     container_name: db
@@ -25,3 +27,13 @@ services:
       - 5432:5432
     volumes:
       - ./volumes/postgres/data:/var/lib/postgresql/data
+    networks:
+      - luminary-network
+
+volumes:
+  postgres_data:
+
+
+networks:
+  luminary-network:
+    driver: bridge
