--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,19 +1,19 @@
 services:
-  backend:
-    container_name: backend
-    image: backend
-    build:
-      context: ./backend
-      dockerfile: backend.dockerfile
-    ports:
-      - 3000:3000
-    environment:
-      - DATABASE_URL
-    depends_on:
-      - db
-    restart: unless-stopped
-    networks:
-      - luminary-network
+  # backend:
+  #   container_name: backend
+  #   image: backend
+  #   build:
+  #     context: ./backend
+  #     dockerfile: backend.dockerfile
+  #   ports:
+  #     - 3000:3000
+  #   environment:
+  #     - DATABASE_URL
+  #   depends_on:
+  #     - db
+  #   restart: unless-stopped
+  #   networks:
+  #     - luminary-network
 
   db:
     container_name: db
@@ -27,13 +27,13 @@ services:
       - 5432:5432
     volumes:
       - ./volumes/postgres/data:/var/lib/postgresql/data
-    networks:
-      - luminary-network
+    # networks:
+    #   - luminary-network
 
 volumes:
   postgres_data:
 
 
-networks:
-  luminary-network:
-    driver: bridge
+# networks:
+#   luminary-network:
+#     driver: bridge
